--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run Python commands
         run: |
           pip install --upgrade pip
+          pip install -r requirements.txt
           #python 3.9.2 -m venv venv
           #source env/bin/activate
           #echo "VIRTUAL ENV:" $VIRTUAL_ENV
