--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
           pip install -r requirements.txt
           #python 3.9.2 -m venv venv
           #source env/bin/activate
-          #echo "VIRTUAL ENV:" $VIRTUAL_ENV
+          ##echo "VIRTUAL ENV:" $VIRTUAL_ENV
